--- a/src/component/About.css
+++ b/src/component/About.css
@@ -46,6 +46,9 @@
 .download {
   cursor: pointer;
 }
+.pb-0{
+  padding-bottom: 0 !important;
+}
 .download_btn {
   border: 2px solid #07d2de;
   border-radius: 50px;
