--- a/src/component/Index.css
+++ b/src/component/Index.css
@@ -70,3 +70,20 @@
     position: relative;
     top: 60px;
   }
+
+  .index_left_inner_cricle img{
+    position: relative;
+    left: 44px;
+    top: 26px;
+    border-radius: 50px;
+  }
+  .moblie_proflie_img img{
+    border-radius: 50px;
+    width: 100%;
+    /* height: 73px; */
+    position: absolute;
+    z-index: 0;
+    opacity: 0.2;
+    /* left: 56px; */
+
+  }
