--- a/src/component/About.css
+++ b/src/component/About.css
@@ -90,3 +90,25 @@
   display: inline-block;
   margin-right: 70px; 
 }
+.progress-with-image {
+  position: relative;
+  display: inline-block;
+  width: 120px;
+  height: 120px;
+}
+
+.progress-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 40px; /* Adjust size as needed */
+  height: 40px; /* Adjust size as needed */
+  transform: translate(-50%, -50%); /* Center the image */
+  z-index: 1;
+}
+
+.skill-name {
+  text-align: center;
+  margin-top: 10px;
+  color: white;
+}
